# wired

trunk/wired/: BUGS  CHANGELOG  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.ubuntu  TODO  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool
trunk/wired/CVS-ck/: Entries
trunk/wired/doc/: README
trunk/wired/po/: ChangeLog  Makefile  POTFILES  fr.gmo  fr.po  fr_FR.po  it_IT.po  update_translations  wired.pot  zh_TW.Big5.po
trunk/wired/src/: BugTrace.cpp  Makefile.am  Makefile.in
trunk/wired/src/audio/: ClipBoard.cpp  ClipBoard.h  Makefile.am  Makefile.in  WaveFile.cpp  WaveFile.h  WriteWaveFile.cpp  WriteWaveFile.h  wscript
trunk/wired/src/codec/: Makefile.am  Makefile.in  WiredCodec.cpp  WiredCodec.h  wscript
trunk/wired/src/conf/: Makefile.in  wired_plugins.conf
trunk/wired/src/data/: Makefile.am  Makefile.in
trunk/wired/src/doc/: wired.conf.exemple
trunk/wired/src/dssi/: Makefile.am  Makefile.in  WiredDSSI.cpp  WiredDSSI.h  WiredExternalPlugin.cpp  WiredExternalPlugin.h  WiredExternalPluginGui.cpp  WiredExternalPluginGui.h  WiredExternalPluginLADSPA.cpp  WiredExternalPluginLADSPA.h  WiredExternalPluginMgr.cpp  WiredExternalPluginMgr.h  dssi.h  wscript
trunk/wired/src/editmidi/: Clavier.cpp  ControlChange.cpp  EditMidi.cpp  EditMidi.h  EditNote.cpp  EditNote.h  Key.cpp  Key.h  Makefile.am  Makefile.in  MidiAttr.cpp  MidiAttr.h  MidiPart.cpp  MidiPart.h  Note.cpp  Note.h  RulerMidi.cpp
trunk/wired/src/engine/: AudioCenter.cpp  AudioCenter.h  AudioEngine.cpp  AudioEngine.h  Device.cpp  Device.h  EngineError.h  EventThread.cp  Makefile.am  Makefile.in  MidiThread.h  RingBuffer.h  RingBuffer.hxx  RingError.h  (+6 more)
trunk/wired/win32/: Makefile  README.txt  installer.iss
wired/: .#Makefile.in.1.4  AUTHORS  BUGS  CHANGELOG  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool  wired.doxy  wscript  xgettext_wired
wired/CVS-ck/: Root
wired/config/m4/: ChangeLog
wired/doc/: SHORTCUTS
wired/po/: Makefile.in  POTFILES.in  fr.gmo  fr.po  fr_FR.po  it_IT.po  wired.pot  zh_TW.Big5.po
wired/src/: BugTrace.cpp  Makefile.am  Makefile.in  debug.h  error.hh  wscript
wired/src/audio/: ClipBoard.cpp  ClipBoard.h  Makefile.am  Makefile.in  WaveFile.cpp  WaveFile.h  WriteWaveFile.cpp  WriteWaveFile.h
wired/src/codec/: Makefile.am  Makefile.in  WiredCodec.cpp  WiredCodec.h
wired/src/conf/: Makefile.am  Makefile.in  wired_exts.conf  wired_plugins.conf  wscript
wired/src/data/: Makefile.am  Makefile.in  wscript
wired/src/doc/: wired.conf.exemple
wired/src/dssi/: Makefile.am  Makefile.in  WiredDSSI.cpp  WiredDSSI.h  WiredExternalPlugin.cpp  WiredExternalPlugin.h  WiredExternalPluginGui.cpp  WiredExternalPluginGui.h  WiredExternalPluginLADSPA.cpp  WiredExternalPluginLADSPA.h  WiredExternalPluginMgr.cpp  WiredExternalPluginMgr.h  dssi.h  ladspa.h
wired/src/editmidi/: Clavier.cpp  Clavier.h  ControlChange.h  EditMidi.cpp  EditMidi.h  EditNote.cpp  EditNote.h  Key.cpp  Key.h  Makefile.am  Makefile.in  MidiAttr.cpp  MidiAttr.h  MidiPart.cpp  MidiPart.h  Note.cpp  Note.h  RulerMidi.cpp  RulerMidi.h  wscript
wired/src/engine/: AudioCenter.cpp  AudioCenter.h  AudioEngine.cpp  AudioEngine.h  Device.cpp  Device.h  EngineError.h  Makefile.am  Makefile.in  RingBuffer.h  RingBuffer.hxx  RingError.h  Settings.cpp  Settings.h  WiredSession.cpp  WiredSession.h  version.h
wired/src/fileloader/: FileConversion.cpp  FileLoader.cpp  FileLoader.h  FileStat.cpp  FileStat.h  Makefile.am  Makefile.in  TreeItemData.cpp  TreeItemData.h  audio.xpm  delete.xpm  folder-open.xpm  list.h  wscript
wired/src/gui/: AccelCenter.cpp  AudioPattern.cpp  AudioPattern.h  AutomationTrack.cpp  ChannelGui.cpp  ChannelGui.h  ColoredBox.cpp  ColoredBox.h  ColoredLine.cpp  ColoredLine.h  Colour.h  Cursor.cpp  Cursor.h  FileConversion.cpp  FileConversion.h  FloatingFrame.cpp  FloatingFrame.h  HelpCtrl.h  HelpPanel.cpp  HelpPanel.h  LedButton.h  MLTraverser.cpp  MLTree.cpp  MLTree.h  MLTreeInfos.cpp  MLTreeInfos.h  MainApp.cpp  MainApp.h  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  MediaLibrary.cpp  MediaLibrary.h  MidiPattern.cpp  MidiPattern.h  MixerGui.cpp  MixerGui.h  OptionPanel.cpp  OptionPanel.h  (+41 more)
wired/src/include/: config.h.in
wired/src/libs/: Makefile.am  Makefile.in  wscript
wired/src/midi/: Makefile.am  Makefile.in  MidiController.cpp  MidiController.h  MidiDevice.cpp  MidiDevice.h  MidiFile.cpp  MidiFile.h  MidiInDevice.cpp  MidiInDevice.h  MidiThread.cpp  MidiThread.h  midi.h
wired/src/mixer/: Channel.cpp  Channel.h  Makefile.am  Makefile.in  Mixer.cpp  Mixer.h  MixerError.h
wired/src/plugins/: HostCallback.cpp  HostCallback.h  Makefile.am  Makefile.in  PluginLoader.cpp  PluginLoader.h  wscript
wired/src/portaudio/: install.sh
wired/src/redist/: Makefile.am  Makefile.in  Plugin.cpp  Plugin.h  Polyphony.cpp  Polyphony.h
wired/src/samplerate/: Makefile.am  Makefile.in  WiredSampleRate.cpp  WiredSampleRate.h  WiredSampleRateTypes.cpp
wired/src/save/: Makefile  Makefile.am  SaveCenter.cpp  SaveCenter.h  SaveElement.cpp  SaveElement.h  WiredDocument.cpp  WiredDocument.h
wired/src/sequencer/: Makefile.am  Makefile.in  SeqTrackPattern.cpp  SeqTrackPattern.h  Sequencer.cpp  Sequencer.h  Track.cpp  Track.h
wired/src/undo/: Makefile.am  Makefile.in  Visitor.cpp  Visitor.h  cAction.h  cActionManager.cpp  cActionManager.h  cAddTrackAction.h  cImportMidiAction.cpp  cImportMidiAction.h
wired/src/wiredvideo/: Makefile.am  Makefile.in  WiredMplayer.cpp  WiredMplayer.h  WiredVideo.cpp  WiredVideo.h  wscript
wired/src/xml/: Makefile.am  Makefile.in  WiredSession.dtd  WiredSessionXml.cpp  WiredSessionXml.h  WiredXml.cpp  WiredXml.h  wscript
wired/win32/: Makefile  README.txt  config.h  installer.iss  resource.rc  wired_plugins.conf
wired/win32/CodeBlocks/: Wired.workspace  copydata.bat  libWiredAkai.cbp  libWiredBeatBox.cbp  libWiredChorus.cbp  libWiredDelay.cbp  libWiredFilter.cbp  libWiredLoopSampler.cbp  libWiredSynth.cbp  libWiredWidgets.cbp  wired.cbp
(+717 files in other folders)
